--- a/oldnodejs/.lighttpd.conf
+++ b/oldnodejs/.lighttpd.conf
@@ -1,7 +1,7 @@
 fastcgi.server += (
-  "/linkstranslator" => ((
-    "socket" => "/tmp/linktranslator-fcgi.sock",
-    "bin-path" => "/data/project/linkstranslator/iojs/bin/iojs /data/project/linkstranslator/server.js",
+  "/urlinkstranslator" => ((
+    "socket" => "/tmp/urlinktranslator-fcgi.sock",
+    "bin-path" => "/data/project/urlinkstranslator/iojs/bin/iojs /data/project/urlinkstranslator/server.js",
     "bin-environment" => (
       "FCGI_MODE" => "TRUE",
     ),
